<resources>
    <string name="app_name">PictoThemo</string>

    <!-- Global -->
    <string name="network_unavalaible">Please enable your internet connection.</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="my_profile">My profile</string>
    <string name="picture_of_the_month">Pictures of the month</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="picture">Picture</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="connection_error">No internet connection</string>

    <!-- Connexion/Registration form -->
    <string name="login_pseudo">Pseudo</string>
    <string name="login_password">Password</string>
    <string name="login_registration">Registration</string>
    <string name="login_title">Welcome!</string>
    <string name="login_login">Log in</string>
    <string name="login_verification">Verifying the information</string>
    <string name="login_pseudo_verification">Invalid pseudo</string>
    <string name="login_password_verification">Password must contains 6 characters minimum.</string>
    <string name="login_fail">Bad Credentials</string>
    <string name="registration_fail">This pseudo is already taken.</string>

    <!-- Menu -->
    <string name="nav_send">Send your picture</string>
    <string name="nav_preferences">Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="set_as_wallaper">Set as wallpaper</string>

    <!-- Picture -->
    <string name="user_unknow">Anonymous</string>
    <string name="theme_title">Theme of %1$s</string>
    <string name="theme_name">#%1$s</string>
    <string name="theme_vote_error">Cannot vote for theme %1$s.</string>
    <string name="vote_tomorrow_picture">Tomorrow picture</string>
    <string name="title_activity_pictures">Pictures</string>
    <string name="picture_vote_error">Cannot vote for picture.</string>
    <string name="comments">Comments</string>
    <string name="vote">Vote</string>
    <string name="vote_success">Voted.</string>
    <string name="vote_not_allowed">Voting for your picture is not allowed.</string>
    <string name="save_picture">Save picture to Image directory</string>
    <string name="save_picture_success">Picture correcty saved.</string>
    <string name="save_picture_error">Error saving picture.</string>
    <string name="save_picture_empty">No picture to show.</string>
    <string name="load_picture_error">Failed to load pictures.</string>
    <string name="remove_picture_error">Failed to remove picture.</string>
    <string name="remove_picture">Remove picture.</string>
    <string name="remove_picture_success">Picture successfully removed.</string>

    <!-- Comment -->
    <string name="comment">Comment</string>
    <string name="comment_placeholder">Type your comment…</string>
    <string name="comment_add">Send</string>
    <string name="already_commented">Only one comment per image.</string>
    <string name="comment_add_error">Cannot add comment.</string>
    <string name="comment_remove_error">Cannot remove comment.</string>
    <string name="comment_empty">No comment yet.</string>

    <!-- Sort options -->
    <string name="sort_by_vote_plus">Order by positive vote</string>
    <string name="sort_by_vote_minus">Order by negative vote</string>
    <string name="sort_by_date">Order by date</string>
    <string name="sort_by_comment">Order by comment count</string>
    <string name="add_comment">Add a comment</string>

    <!-- Search -->
    <string name="user">User</string>
    <string name="theme">Theme</string>
    <string name="starting_date">Starting date</string>
    <string name="ending_date">Ending date</string>
    <string name="vote_count">Vote count</string>

    <!-- Upload -->
    <string name="upload_success">Picture successfully uploaded.</string>
    <string name="upload_error">Cannot upload picture.</string>
    <string name="upload_format_error">Picture format not allowed.</string>
    <string name="upload_size_error">Picture too big (max 5mo).</string>
    <string name="title_activity_settings_fragment">Settings</string>

    <!-- Settings -->
    <string name="settings_wallpaper_key">setWallpaper</string>
    <string name="settings_wallpaper_title">Wallpaper</string>
    <string name="settings_wallpaper_summary">Change your wallpaper everyday with the picture of the day.</string>
    <string name="settings_replay_tuto_key">TUTORIAL_PREF</string>
    <string name="settings_replay_tuto_title">Replay tutorial on next launch</string>
    <string name="settings_delete_account_key">removeAccount</string>
    <string name="settings_delete_account">Delete my account</string>
    <string name="settings_delete_account_description">This action cannot be undone.</string>

    <!-- User -->
    <string name="profil_registration_date">Registered since %1$s</string>
    <string name="profil_see_pictures">See (his/her) pictures</string>
    <string name="profil_normal">profil_%d</string>
    <string name="profil_big">profil_big_%d</string>
    <string name="profil_load_error">Cannot load user information</string>
    <string name="profil_profil_error">Cannot set profil picture</string>
    <string name="remove_user_error">Authentication error. Unable to deleteSuppression impossible.</string>
    <string name="remove_user_success">Votre compte a été correctement supprimé.</string>
    <string name="account">Account</string>
    <string name="account_placeholder">Type your password…</string>

    <!-- Content description -->
    <string name="content_logo">Pictothemo\'s logo</string>
    <string name="content_loading">Loading</string>
    <string name="content_user_picture">User"s profil picture</string>
    <string name="content_comment_count">Comments count</string>
    <string name="content_negative_count">Positive votes count</string>
    <string name="content_positive_count">Negative votes count</string>
    <string name="content_is_potd">Indicator for picture of the day</string>
    <string name="content_profil_trophy">User\'s trophy</string>
    <string name="content_launch_icon">Icone premiere utilisation</string>s

    <string name="default_int_value">0</string>

    <!-- First launch -->
    <string name="first_launch_navigator">Navigateur</string>

    <string name="first_launch_title1">Welcome to Pictothemo</string>
    <string name="first_launch_title2">How it works</string>
    <string name="first_launch_title3">Its interest</string>
    <string name="first_launch_desc1"><![CDATA[Pictothemo is an app which highlight one member\'s image a day.
    This picture refers to a <b>theme</b> and had been <b>elected picture of the day</b> by the <b>community</b>.]]></string>
    <string name="first_launch_desc2"><![CDATA[<b>Every day</b> you can <b>vote</b> for your favourite picture which will be elected the following day.
    You can also <b>vote for the theme</b> of two days later.]]></string>
    <string name="first_launch_desc3"><![CDATA[You can choose to <b>replace your wallpaper everyday</b> by the winning picture in the parameters.
    You can also propose your image and try to <b>unlock all the Pictothemo trophies.</b>!]]></string>

    <string name="first_launch_validation">LET\'S GO</string>
    <string name="first_launch_preference_tuto">At any moment you will be able to replay this tutorial in the parameter center.</string>

    <!-- Review -->
    <string name="review_title">Do you like Picothemo?</string>
    <string name="review_description">If you like Pictothemo, could you take a moment to review the app. </string>
    <string name="review_yes">Yes</string>
    <string name="review_no">No</string>
    <string name="review_later">Later</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_email">jessy.barthelemy08@gmail.com</string>
    <string name="about_portfolio">http://jessy-barthelemy.byethost6.com/</string>
</resources>
