<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:contentDescription="@string/content_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo_transparent"
            android:layout_gravity="center_horizontal"/>

        <TextView
            style="@style/TitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/little_space"
            android:text="@string/about"/>

        <LinearLayout
            android:id="@+id/about_separator"
            android:orientation="horizontal"
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:scaleX="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/little_space"
            android:layout_marginBottom="@dimen/little_space"
            android:text="@string/about_email"
            android:autoLink="web|email"
            android:textColorLink="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/little_space"
            android:text="@string/about_portfolio"
            android:autoLink="web|email"
            android:textColorLink="@android:color/black"/>
    </LinearLayout>
</ScrollView>