<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jessy_barthelemy.pictothemo.activities.LoginActivity">

    <ImageView
        android:contentDescription="@string/content_loading"
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_transparent"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo_transparent"
            android:layout_gravity="center_horizontal"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/TitleBoldAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_title"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pseudo"
                android:inputType="textNoSuggestions"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:theme="@style/ColoredButtonAccent"
                android:id="@+id/login_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_login"
                android:layout_gravity="center_horizontal" />
            <Button
                android:theme="@style/ColoredButtonBase"
                android:id="@+id/login_register_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_registration"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
