<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:id="@+id/frame_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="@dimen/little_space">
        <ImageView
            android:contentDescription="@string/content_loading"
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_height"
            android:background="@color/lightGrey"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/loading"/>

        <View
            android:id="@+id/loadbar"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom|start"/>

        <TextView
            android:id="@+id/picture_theme"
            android:layout_marginBottom="@dimen/little_space"
            android:layout_marginStart="@dimen/little_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay"
            android:layout_gravity="bottom|start"/>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_picture"
        android:paddingRight="@dimen/little_space"
        android:paddingLeft="@dimen/little_space">

        <LinearLayout
            android:id="@+id/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/picture_stats">
            <ImageView
                android:id="@+id/picture_profil"
                android:contentDescription="@string/content_user_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profil_0"
                android:layout_marginEnd="@dimen/little_space"/>
            <TextView
                android:id="@+id/picture_pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:ellipsize="end"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/picture_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center">

            <TextView
                android:id="@+id/picture_comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_int_value"
                android:textColor="@color/colorPrimary"/>
            <ImageView
                android:contentDescription="@string/content_comment_count"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/comment"
                android:paddingEnd="15dp"
                android:paddingStart="@dimen/little_space"/>

            <LinearLayout
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/picture_positive_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_int_value"
                    android:textColor="@color/colorAccent"/>
                <ImageView
                    android:contentDescription="@string/content_negative_count"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/logo_transparent"
                    android:paddingRight="@dimen/little_space"
                    android:paddingLeft="@dimen/little_space"/>
                <TextView
                    android:id="@+id/picture_negative_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_int_value"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profil"
            android:layout_alignParentStart="true"
            android:paddingStart="@dimen/little_space"
            android:paddingEnd="@dimen/little_space"
            android:gravity="center_vertical">

            <ImageView
                android:contentDescription="@string/content_is_potd"
                android:id="@+id/is_potd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_trophy"
                android:tint="@color/colorAccent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/picture_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/little_space"
                android:textStyle="italic"
                android:textSize="@dimen/date_size"
                android:textColor="@android:color/white"
                android:background="@drawable/badge"
                android:paddingRight="@dimen/little_space"
                android:paddingLeft="@dimen/little_space"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
